--- a/style.css
+++ b/style.css
@@ -10,10 +10,9 @@ body {
 }
 .container {
   display: grid;
-  height: 100vh;
   padding: 10px;
   grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  gap: 15px;
 }
 a {
   display: block;
@@ -27,6 +26,8 @@ a:focus {
   border-radius: 8px;
 }
 .container a {
+  display: grid;
+  align-items:flex-end;
   color: #fff;
   text-decoration: none;
 }
@@ -34,6 +35,28 @@ a:focus {
   display: block;
   font-size: 50px;
   color: #08ffc8;
+}
+a{
+  position: relative;
+  overflow: hidden;
+  transition: .3s;
+}
+a::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0%;
+  height: 4px;
+  background-color: #08ffc8;
+  transition: .3s;
+}
+.specialty:hover::after{
+  width: 100%;
+}
+.specialty:hover {
+  transform: translateY(-4px);
 }
 .specialty h2 {
   font-size: 25px;
@@ -44,16 +67,21 @@ a:focus {
   justify-content: space-between;
   align-items: center;
 }
-.specialty h4 {
+.specialty h3 {
   margin-top: 15px;
   margin-bottom: 5px;
   text-align: left;
   color: #08ffc8;
+  font-weight: 500;
 }
 .degree-type div {
   font-size: 12px;
   text-align: left;
   color: #dadada;
+}
+.degree-type div span{
+  color: #08ffc8;
+  margin-right: 3px;
 }
 .business {
   grid-column-start: 2;
@@ -66,4 +94,56 @@ a:focus {
 .em-me-se {
   grid-column-start: 2;
   grid-column-end: 4;
+}
+@media screen and (max-width: 1180px){
+  .container{
+    grid-template-columns:repeat(2,1fr);
+  }
+  .business {
+    grid-column-start: 2;
+    grid-column-end: 2;
+  }
+  .co-in-te {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .em-me-se {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+}
+@media screen and (max-width: 800px){
+  .icon{
+    font-size: 40px;
+  }
+  .specialty h2{
+    font-size: 22px;
+  }
+  .specialty h3{
+    font-size: 18px;
+  }
+  .degree-type{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .degree-type div{
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 480px){
+  .container{
+    grid-template-columns:1fr;
+  }
+  .business {
+    grid-column-start: auto;
+    grid-column-end: auto;
+  }
+  .co-in-te {
+    grid-column-start: auto;
+    grid-column-end: auto;
+  }
+  .em-me-se {
+    grid-column-start: auto;
+    grid-column-end: auto;
+  }
 }
