--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ a{
   background-color: #85858500;
   transition: .3s;
   z-index: -1;
+  background-image: linear-gradient(0deg, black -35%, transparent);
 }
 .specialty{
   background-position: center;
